Bug 571783 - Split-menu buttons are misaligned in the Firefox button menu. r=gavin a=blocking
UltraBlame original commit: 79d0beec27b5e585d9c8fcfefc2f34f4898c0352

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -1846,6 +1846,23 @@ menuhovertext
 ;
 }
 .
+split
+-
+menuitem
+-
+menu
+{
+-
+moz
+-
+box
+-
+pack
+:
+end
+;
+}
+.
 appmenu
 -
 edit
